@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-21T16:16:12Z",
+  "timestamp" : "2022-07-22T08:16:59Z",
   "count_outdated" : 406,
   "uniques_outdated" : 220,
   "count" : 429,
-  "uniques" : 232,
+  "uniques" : 233,
   "clones" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
