@@ -1,3 +1,10 @@
+2022-07-22T08:16:59Z:
+* notice: last 14d: unq all: 3 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 220 406 / 232 429
+* notice: next accum: outdated-unq outdated-all / unq all: 220 406 / 233 429
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-08 2022-07-22]
+
 2022-07-21T16:16:12Z:
 * notice: last 14d: unq all: 3 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 219 404 / 232 427
